# k8s-e2e-runner

./: .dockerignore  .gitignore  README.md  prow-config.yaml
e2e-runner/: Dockerfile  Makefile  bootstrap.py  capz.py  capz_flannel.py  ci.py  ci_factory.py  cleanup-azure-rgs.py  collect-logs-linux.yaml  collect-logs-windows.yaml  config_capz_flannel.txt  constants.py  deployer.py  enableWinServices.ps1  entrypoint.sh  installPatches.ps1  log.py  main.py  requirements.txt  setup.cfg  terraform.py  terraform.tf  terraform_custom_vhd.tf  terraform_flannel.py  utils.py
e2e-runner/cluster-api/: kind-config.yaml
e2e-runner/cluster-api/azure/: bootstrap-vm-cloud-config.txt  cluster.yaml.j2  config.yaml  control-plane.yaml.j2
e2e-runner/cluster-api/flannel/: kube-flannel-windows.Dockerfile  kube-flannel-windows.yaml.j2  kube-flannel.yaml.j2  setup.go
e2e-runner/cluster-api/kube-proxy/: kube-proxy-windows.yaml.j2
e2e-runner/cluster-api/scripts/: check-bootstrap-vm.sh  collect-logs.ps1  collect-logs.sh  init-bootstrap-vm.sh  kubeadm-bootstrap.sh  set-vxlan-devices-mtu.sh  update-containerd.ps1  update-k8s.sh
e2e-runner/debug/: Dockerfile  README.md  parse-prow-config.py  setup-env.ps1  setup-env.sh
e2e-runner/e2e_runner/: base.py  constants.py  exceptions.py  factory.py  logger.py  utils.py
e2e-runner/e2e_runner/cli/: run_ci.py  shell.py
e2e-runner/e2e_runner/scripts/: allocate-source-vip.ps1  collect-logs.ps1  collect-logs.sh  confirm-ready-cni.ps1  init-bootstrap-vm.sh  kubeadm-bootstrap.ps1  kubeadm-bootstrap.sh  kubelet-start.ps1  set-nics-mtu.sh  (+3 more)
v2/: ci.py  (+22 more)
(+212 files in other folders)
