[metadata]
name = e2e-runner
version = 1.0.0
description = "Kubernetes End-To-End Runner"
author = "Kubernetes E2E Team"
home-page = https://github.com/e2e-win/k8s-e2e-runner

[files]
packages =
    e2e_runner
data_files =
    '' = e2e_runner/*

[entry_points]
console_scripts =
    e2e-runner = e2e_runner.cli.shell:main

e2e.runner =
    run_ci = e2e_runner.cli.run_ci:RunCI
